[package]
name = "metrics"
version = "0.1.0"
authors = ["Parijat Mishra <parijat.mishra@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
clap = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
hyper = "0.13"
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["default", "time"] }
percent-encoding = "2.1"
lazy_static = "^1.4"
regex = "1"

